Criado o botao de registro, e junto a ele alteracao no botao de envio

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <input type="text" name="" placeholder="Usuário">
     <input type="password" name="" placeholder="Senha">
     <input type="submit" name="" value="Enviar">
+    <a href="#"><button>Registre-se</button></a>
 
 </form>
 
